# DXBCDec

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: dxbc.hpp
src/: CMakeLists.txt  dxbc.cpp
test/: CMakeLists.txt  dxbc_test.cpp
